--- a/main.css
+++ b/main.css
@@ -16,10 +16,10 @@ body {
     "footer footer footer";
 
   grid-template-columns: 1fr 1200px 1fr;
-  grid-template-rows: 33px 100px 55px 35px 1fr minmax(170px, 1fr);
+  grid-template-rows: 33px 100px 55px 35px 1fr 170px;
 }
 
-#top{
+#top {
   grid-area: top;
 }
 
@@ -27,35 +27,33 @@ body {
   grid-area: header;
 }
 
-
 #nav {
   grid-area: nav;
 }
 
-#breadcrumbs{
+#breadcrumbs {
   grid-area: crumbs;
 }
 #main {
   grid-area: main;
+  height: 100vh;
 }
 #footer {
   grid-area: footer;
 }
 
-.wrapper{
+.wrapper {
   width: 1200px;
   margin: 0 auto;
   height: 100%;
 }
 
-main{
-  padding-top: 30px; 
+main {
+  padding-top: 30px;
   padding-bottom: 90px;
 }
 
-
-
-.top{
+.top {
   border-bottom: 1px solid #bbb;
 }
 
@@ -64,11 +62,13 @@ main{
   flex-direction: row;
   align-items: center;
   height: 33px;
-  font-size: 14px;  
+  font-size: 14px;
 }
 
 .top-nav-item {
   margin: 0 13px;
+  color: #000;
+  text-decoration: none;
 }
 
 .header-main {
@@ -144,49 +144,53 @@ main{
   width: 45px;
 }
 
-.nav{
-  border-top : 1px solid #bbb;
-  border-bottom : 1px solid #bbb;
+.nav {
+  border-top: 1px solid #bbb;
+  border-bottom: 1px solid #bbb;
 }
 
-.navbar{
-  display: flex; 
+.navbar {
+  display: flex;
   height: 100%;
 }
 
-.nav-item{  
+.nav-item {
   display: flex;
   border-left: 1px solid #bbb;
-  text-align: center; 
-  align-items: center;    
+  text-align: center;
+  align-items: center;
   padding: 0 20px;
+  text-decoration: none;
+  color: #000;
 }
-.nav-item:first-child{
+.nav-item:first-child {
   background-color: #ccc;
 }
 
-.nav-item__double{
+.nav-item__double {
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
-.nav-item__bold{
+.nav-item__bold {
   font-weight: 900;
+  text-decoration: none;
+  color: #000;
 }
 
-.nav-item:last-child{
-  border-right: 1px solid #bbb; 
+.nav-item:last-child {
+  border-right: 1px solid #bbb;
 }
 
-.nav-item__active{
+.nav-item__active {
   background-color: #db055b;
 }
 
-.breadcrumbs{
-  border-bottom: 1px solid #bbb;  
+.breadcrumbs {
+  border-bottom: 1px solid #bbb;
 }
 
-.crumbs{
+.crumbs {
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -194,76 +198,73 @@ main{
   font-size: 12px;
 }
 
-.cramb{
-  padding: 0 5px; 
+.cramb {
+  padding: 0 5px;
 }
-.cramb:after{
+.cramb:after {
   content: ">";
   padding-left: 10px;
 }
-.cramb:last-child::after{
+.cramb:last-child::after {
   content: "";
 }
 
-
-.h1-title{
+.h1-title {
   font-size: 28px;
   font-weight: 700;
 }
 
-.pagination{
+.pagination {
   width: 1150px;
   margin: 0 auto;
 }
 
-.pagination-number{
+.pagination-number {
   display: inline-block;
   padding: 7px 14px;
   border: 1px solid #bbb;
   border-radius: 8px;
   margin-top: 10px;
-  margin-right: 13px;  
+  margin-right: 13px;
   font-weight: 700;
 }
 
-.pagination-number__active{
+.pagination-number__active {
   background-color: #db055b;
 }
 
-
-#main-section{
+#main-section {
   display: grid;
-  grid-template-rows:  repeat(auto-fill, minmax(180px, 190px)) ; 
-  grid-template-columns:  minmax(560px, 1fr) minmax(560px, 1fr);
+  grid-template-rows: repeat(auto-fill, minmax(180px, 190px));
+  grid-template-columns: minmax(560px, 1fr) minmax(560px, 1fr);
   grid-gap: 72px 41px;
   margin: 50px 0;
 }
-.article-preview{
- 
+.article-preview {
   display: flex;
   flex-direction: row;
 }
 
-.article-preview-text{
+.article-preview-text {
   padding-left: 19px;
 }
-.article-preview-title{
+.article-preview-title {
   font-size: 18px;
   font-weight: 700;
   margin: 15px 15px 15px 0;
 }
-.article-preview-description{
+.article-preview-description {
   font-size: 15px;
-  margin: 0px;  
+  margin: 0px;
 }
 
-.footer{
-  background-color: #dfe1e9; 
+.footer {
+  background-color: #dfe1e9;
 }
-.footer  p{
+.footer p {
   margin: 1px;
 }
-.footer-conten{
+.footer-conten {
   font-size: 15px;
   display: grid;
   grid-template-rows: 100px;
@@ -272,23 +273,40 @@ main{
   padding: 40px 0 30px 0;
 }
 
-
-
-.footer-navbar{
+.footer-navbar {
   display: flex;
   flex-direction: column;
+  height: inherit;
 }
 
-.footer-nav{
+.footer-nav {
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;  
+  flex-wrap: wrap;
+  height: 70px;
 }
 
-.footer-nav-item{
-  margin: 1px; 
+.footer-nav-item {
+  text-decoration: none;
+  color: #000;
+  margin: 1px;
 }
 
-.footer-nav-privacy{
+.footer-nav-privacy {
+  text-decoration: none;
+  color: #000;
   margin: 10px 0 0 0;
+}
+
+.footer-logo {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.footer-logo-image {
+  align-self: flex-end;
+}
+
+.footer-logo-link {
+  align-self: flex-end;
 }
