--- a/main.css
+++ b/main.css
@@ -15,7 +15,7 @@ body {
     ". main ."
     "footer footer footer";
 
-  grid-template-columns: 1fr 1200px 1fr;
+  grid-template-columns: 1fr minmax(1100px, 1200px)  1fr; 
   grid-template-rows: 33px 100px 55px 35px 1fr 170px;
 }
 
@@ -42,7 +42,7 @@ body {
 }
 
 .wrapper {
-  width: 1200px;
+  max-width: 1200px;
   margin: 0 auto;
   height: 100%;
 }
@@ -52,7 +52,7 @@ main {
   padding-bottom: 90px;
 }
 
-.top {
+.top {  
   border-bottom: 1px solid #bbb;
 }
 
@@ -213,7 +213,7 @@ main {
 }
 
 .pagination {
-  width: 1150px;
+  max-width: 1150px;
   margin: 0 auto;
 }
 
@@ -234,11 +234,13 @@ main {
 #main-section {
   display: grid;
   grid-template-rows: repeat(auto-fill, minmax(180px, 190px));
-  grid-template-columns: minmax(560px, 1fr) minmax(560px, 1fr);
-  grid-gap: 72px 41px;
+  grid-template-columns: repeat(auto-fill, minmax(500px, 560px))  ;
+  justify-content: center;
+  grid-gap: 70px 60px;
   margin: 50px 0;
 }
 .article-preview {
+  align-self: center;
   display: flex;
   flex-direction: row;
 }
